// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default render of previous button 1`] = `
<button
  disabled={true}
  type="button"
>
  <i
    className="fas fa-chevron-left"
  />
   Previous
</button>
`;

exports[`Previous button with onClick callback 1`] = `
<button
  disabled={true}
  onClick={[MockFunction]}
  type="button"
>
  <i
    className="fas fa-chevron-left"
  />
   Previous
</button>
`;

exports[`Previous button with the previous enabled 1`] = `
<button
  disabled={false}
  type="button"
>
  <i
    className="fas fa-chevron-left"
  />
   Previous
</button>
`;
